[gd_scene load_steps=3 format=3 uid="uid://d0j3yao8getw6"]

[ext_resource type="Script" uid="uid://5de6hixunq0i" path="res://scripts/multiplayer/main_menu.gd" id="1_l6cm7"]

[sub_resource type="Theme" id="Theme_ekxnf"]
default_font_size = 40

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_ekxnf")
script = ExtResource("1_l6cm7")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.540623, 0.490854, 1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="title" type="Label" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "Server Lobby Joining Example"
horizontal_alignment = 1
autowrap_mode = 2

[node name="create" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Create Sever"

[node name="join" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Join Server"

[node name="quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quit"

[node name="QuickStart" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Quick Start"

[connection signal="pressed" from="MarginContainer/VBoxContainer/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuickStart" to="." method="_on_quick_start_pressed"]
